fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,5 @@ h1 {
 
 canvas {
 	display: block;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	margin: 0 auto;
 }
